Bug 1058396 - Make String(aSymbol) return the symbol's description, as specified in ES6 draft rev 27. r=jorendorff.